--- a/Design/start.html
+++ b/Design/start.html
@@ -24,6 +24,7 @@
 <div id="introduction">
     <h2>Vacation Planner</h2>
     <p>mit dem Vacationplanner kannst du deinen Urlaub planen usw.</p>
+    <button type="button" class="btn btn-light">Try it!</button>
 </div>
     
 </body>
