Aenderungen im Bezug auf die Startseite

--- a/Design/start.html
+++ b/Design/start.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-
+<!------ NAVBAR--->
 <div class="container-fluid">
     <div class="navbar-header">
       <a class="navbar-brand" href="#">VacationPlanner</a>
@@ -20,12 +20,24 @@
       <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
       <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
     </ul>
-</div>
-<div id="introduction">
-    <h2>Vacation Planner</h2>
-    <p>mit dem Vacationplanner kannst du deinen Urlaub planen usw.</p>
-    <button type="button" class="btn btn-light">Try it!</button>
-</div>
+</div>  
+	
+<! --- Header --->
+<header class ="masthead">
+	<div id ="intro-text">
+		<h2> Vacation Planner</h2>
+		<p> mit dem Vacationplanner kannst du deinen Urlaub planen usw.</p>
+		<!--button type="button" class="active" onClick="document.getElementById('demo').scrollIntoView();"-->
+		
+		<button type="button" class="active" href="#demo">
+		<a href="#demo"> Try it  </a> 
+		</button>
+	</div>
+</header>
+    
+<section id="demo">
+	<h2> Demo </h2>
+</section>	
     
 </body>
 </html>
