--- a/Design/start.html
+++ b/Design/start.html
@@ -26,11 +26,9 @@
 <header class ="masthead">
 	<div id ="intro-text">
 		<h2> Vacation Planner</h2>
-		<p> mit dem Vacationplanner kannst du deinen Urlaub planen usw.</p>
-		<!--button type="button" class="active" onClick="document.getElementById('demo').scrollIntoView();"-->
-		
-		<button type="button" class="active" href="#demo">
-		<a href="#demo"> Try it  </a> 
+		<p>This website helps you to plan your luggage for your next vacation.</p>
+		<button id="demoButton" type="button" class="btn btn-lg" onClick="document.getElementById('demo').scrollIntoView();">
+            Try it!
 		</button>
 	</div>
 </header>
