Divs fuer Anzeigen

--- a/Design/mainpage/main.html
+++ b/Design/mainpage/main.html
@@ -22,7 +22,7 @@
             <span class="caret"></span></a>
               <ul class="dropdown-menu">
               <li><a href="#">profile settings</a></li>
-              <li><a href="#">default list</a></li>
+              <li><a href="#">default item list</a></li>
             </ul>
           </li>
           <li><a href="#"><span class="glyphicon glyphicon-log-out"></span> Logout </a></li>
@@ -36,16 +36,24 @@
     <div class="sidenav">
         <h3 id="sidenavtitle">Vacations</h3>
         <ul>
-            <li><a href="#">Frankreich 2018</a></li>
-            <li><a href="#">Italien 2018</a></li>
-            <li><a href="#">Türkei 2018</a></li>
-            <li><a href="#">Spanien 2018</a></li>
+            <li><a href="#">France 2018</a></li>
+            <li><a href="#">Italy 2018</a></li>
+            <li><a href="#">Turkey 2018</a></li>
+            <li><a href="#">Spain 2018</a></li>
         </ul>
     </div>
     
     <!---- Main ---->
     <div id="mainDiv">
-        
+        <div id="weather"> 
+            Wetteranzeige
+        </div>
+        <div id="weatherItems">
+            berechnete WeatherItems
+        </div>
+        <div id="defaultItems">
+            DefaultItems für diesen Urlaub
+        </div>
     </div>
 </body>
 </html>
