--- a/Design/mainpage/main.html
+++ b/Design/mainpage/main.html
@@ -43,7 +43,7 @@
         </ul>
     </div>
     
-    <!---- Main View ---->
+    <!---- MAIN VIEW ---->
     <div id="mainDiv">
         <div id="weather"> 
             Wetteranzeige
