--- a/Design/mainpage/main.html
+++ b/Design/mainpage/main.html
@@ -48,7 +48,7 @@
         <div id="weather">  
             <p id="place">Paris, France</p>
             
-            <img src="../images/weatherExample.jpg" alt="weather" id="weatherIcon" height="110" width="110">
+            <img src="https://image.flaticon.com/icons/svg/12/12163.svg" alt="weather" id="weatherIcon" height="110" width="110">
             <div  id="temperature"> 
                    <h4>Weather Data</h4>
                 avgHighTemp: <p id= "highTemp">12</p> °C
