--- a/Design/profilepage/profilepage.html
+++ b/Design/profilepage/profilepage.html
@@ -27,6 +27,8 @@
           </li>
           <li><a href="#"><span class="glyphicon glyphicon-log-out"></span> Logout </a></li>
         </ul>
+        <h2 id="titleProfil"> profile settings </h2>
+        <h4 id="secondTitleProfil"> fill in the fields to change your settings </h4>
     </div>  
 </body>
 </html>
