--- a/Design/mainpage/main.html
+++ b/Design/mainpage/main.html
@@ -14,14 +14,14 @@
     <!------ NAVBAR--->
     <div class="container-fluid">
         <div class="navbar-header">
-          <a class="navbar-brand" href="#">VacationPlanner</a>
+          <a class="navbar-brand" href="">VacationPlanner</a>
         </div>
         <ul class="nav navbar-nav navbar-right">
           <li class="dropdown">
             <a class="dropdown-toggle" data-toggle="dropdown" href="#"><span class="glyphicon glyphicon-user" ></span> Profile
             <span class="caret"></span></a>
               <ul class="dropdown-menu">
-              <li><a href="#">profile settings</a></li>
+              <li><a href="../profilepage/profilepage.html">profile settings</a></li>
               <li><a href="#">default item list</a></li>
             </ul>
           </li>
