--- a/Design/startpage/start.html
+++ b/Design/startpage/start.html
@@ -14,7 +14,7 @@
 <!------ NAVBAR--->
 <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" href="#">VacationPlanner</a>
+      <a class="navbar-brand">VacationPlanner</a>
     </div>
     <ul class="nav navbar-nav navbar-right">
         <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login with Google</a></li>
