fertig mit grid

--- a/neue pages/start.html
+++ b/neue pages/start.html
@@ -8,7 +8,7 @@
     <meta name="google-signin-client_id" content="870925711611-nmi0bmqckemvf20p0kdpkgnl4m7oq0i0.apps.googleusercontent.com">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/pages.css">
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/start.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
     <script src="https://apis.google.com/js/platform.js" async defer></script>
