--- a/neue pages/vacation.html
+++ b/neue pages/vacation.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="css/pages.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/momentjs/latest/moment.min.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />
 </head>
 <body>
 <!------ NAVBAR--->
@@ -58,6 +61,12 @@
                     <input class="form-control" type="text" id="city" name="city" placeholder="Enter city" maxLength="20" pattern="^[_A-z0-9]{1,}$" required>
                   </div>
                 </div>
+                 <div class="form-group">
+                  <label class="control-label col-sm-2" for="daterange">Period of time: </label>
+                  <div class="col-sm-10">
+                    <input class="form-control" type="text" id="daterange" name="daterange" placeholder="Enter the period of time of the vacation"required>
+                  </div>
+                </div>
                 <div class="form-group col-sm-10 col-sm-push-1 text-center top-buffer">
                     <button type="submit" class="btn btn-default" id ="submit">Submit</button>
                 </div>
@@ -65,4 +74,13 @@
          </div>
         </div>
     </div>
+    <script>
+        $(function() {
+          $('input[name="daterange"]').daterangepicker({
+            opens: 'left'
+          }, function(start, end, label) {
+            console.log("A new date selection was made: " + start.format('YYYY-MM-DD') + ' to ' + end.format('YYYY-MM-DD'));
+          });
+        });
+    </script>
 </body>
