--- a/neue pages/vacation.html
+++ b/neue pages/vacation.html
@@ -74,12 +74,19 @@
          </div>
         </div>
     </div>
-    <script>
+    <script type="text/javascript">
         $(function() {
           $('input[name="daterange"]').daterangepicker({
-            opens: 'left'
-          }, function(start, end, label) {
-            console.log("A new date selection was made: " + start.format('YYYY-MM-DD') + ' to ' + end.format('YYYY-MM-DD'));
+              autoUpdateInput: false,
+              locale: {
+                  cancelLabel: 'Clear'
+              }
+          });
+          $('input[name="daterange"]').on('apply.daterangepicker', function(ev, picker) {
+              $(this).val(picker.startDate.format('MM/DD/YYYY') + ' - ' + picker.endDate.format('MM/DD/YYYY'));
+          });
+          $('input[name="daterange"]').on('cancel.daterangepicker', function(ev, picker) {
+              $(this).val('');
           });
         });
     </script>
