--- a/neue pages/main.html
+++ b/neue pages/main.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="css/main.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/momentjs/latest/moment.min.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />
 </head>
 <body>
 <!------ NAVBAR--->
@@ -257,6 +260,12 @@
                       <label class="control-label col-sm-2" for="vacname">City: </label>
                       <div class="col-sm-10">
                         <input class="form-control" type="text" id="city" name="city" placeholder="Enter city" maxLength="20" pattern="^[_A-z0-9]{1,}$" required>
+                      </div>
+                    </div>
+                    <div class="form-group">
+                      <label class="control-label col-sm-2" for="daterange">Period of time: </label>
+                      <div class="col-sm-10">
+                        <input class="form-control" type="text" id="daterange" name="daterange" placeholder="Enter the period of time of the vacation"required>
                       </div>
                     </div>
                     <div class="form-group text-center">
