--- a/neue pages/profile.html
+++ b/neue pages/profile.html
@@ -1,117 +1,119 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <title>Vacation Planner - profile</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/pages.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-</head>
-<body>
-<!------ NAVBAR--->
-    <div class="container-fluid">
-        <div class="navbar-header">
-          <a class="navbar-brand" href="main.html">VacationPlanner</a>
-        </div>
-        <ul class="nav navbar-nav navbar-right">
-          <li class="dropdown">
-            <a class="dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-user"></span> Profile<span class="caret"></span></a>
-              <ul class="dropdown-menu">
-              <li><a href="">profile settings</a></li>
-              <li><a href="#">default item list</a></li>
+    <head>
+        <title>Vacation Planner - profile</title>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+        <link rel="stylesheet" href="css/pages.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+    </head>
+    <body>
+        <!------ NAVBAR--->
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <a class="navbar-brand" href="main.html">VacationPlanner</a>
+            </div>
+            <ul class="nav navbar-nav navbar-right">
+                <li class="dropdown">
+                    <a class="dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-user"></span> Profile<span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="">profile settings</a></li>
+                        <li><a href="#">default item list</a></li>
+                    </ul>
+                </li>
+                <li><a href="#"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
             </ul>
-          </li>
-          <li><a href="#"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
-        </ul>
-    </div>
-    
-<!---- HEADLINE ------>
-    <div class="container-fluid">
-        <div class="row text-center top-buffer">
-            <h2>Profile settings</h2>
         </div>
-        <div class="row text-center">
-            <h4>Fill in the fields to change your settings</h4>
-        </div>
-<!---- FORM ------>
-        <div class="row">
-            <div class="col-sm-8 col-sm-push-2 top-buffer">
-                <form>
-                    <div class="form-group">
-                      <label class="control-label col-sm-2" for="username">Username:</label>
-                      <div class="col-sm-10">
-                        <input class="form-control" type="text" maxLength="15" pattern="^[_A-z0-9]{1,}$" id="username" name="username">
-                      </div>
+
+        <!---- HEADLINE ------>
+        <div class="container-fluid mainContainer" style="background-image: url(images/Hintergrund1.jpg); background-size: cover;">
+            <div class="col-sm-8 col-sm-push-2 top-buffer white">
+                <div class="row text-center">
+                    <h2>Profile settings</h2>
+                </div>
+                <div class="row text-center">
+                    <h4>Fill in the fields to change your settings</h4>
+                </div>
+                <!---- FORM ------>
+                <div class="row">
+                    <div class="col-sm-8 col-sm-push-2 top-buffer">
+                        <form>
+                            <div class="form-group">
+                                <label class="control-label col-sm-2" for="username">Username:</label>
+                                <div class="col-sm-10">
+                                    <input class="form-control" type="text" maxLength="15" pattern="^[_A-z0-9]{1,}$" id="username" name="username">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label class="control-label col-sm-2" for="gender">Gender:</label>
+                                <div class="col-sm-10">          
+                                    <select class="form-control" id="gender" name="gender">
+                                        <option value='male'>male</option>
+                                        <option value='female'>female</option>
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label class="control-label col-sm-2" for="clothsize">Clothingsize:</label>
+                                <div class="col-sm-10">
+                                    <select class="form-control" id="clothsize" name="clothsize">
+                                        <option>XS</option>
+                                        <option>S</option>
+                                        <option>M</option>
+                                        <option>L</option>
+                                        <option>XL</option>
+                                        <option>XXL</option>
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label class="control-label col-sm-2" for="shoesize">Shoesize:</label>
+                                <div class="col-sm-10">
+                                    <select class="form-control" id="shoesize" name="shoesize">
+                                        <option>35</option>
+                                        <option>36</option>
+                                        <option>37</option>
+                                        <option>38</option>
+                                        <option>39</option>
+                                        <option>40</option>
+                                        <option>41</option>
+                                        <option>42</option>
+                                        <option>43</option>
+                                        <option>44</option>
+                                        <option>45</option>
+                                        <option>46</option>
+                                        <option>47</option>
+                                        <option>48</option>
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label class="control-label col-sm-2" for="favocolor">Favorite color:</label>
+                                <div class="col-sm-10">
+                                    <select class="form-control" id="favocolor" name="favocolor">
+                                        <option>blue</option>
+                                        <option>green</option>
+                                        <option>yellow</option>
+                                        <option>orange</option>
+                                        <option>red</option>
+                                        <option>purple</option>
+                                        <option>pink</option>
+                                        <option>grey</option>
+                                        <option>black</option>
+                                        <option>white</option>
+                                        <option>brown</option>
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="form-group col-sm-10 col-sm-push-1 text-center top-buffer">
+                                <button type="submit" class="btn btn-default" id ="submit">Submit</button>
+                            </div>
+                        </form>
                     </div>
-                    <div class="form-group">
-                      <label class="control-label col-sm-2" for="gender">Gender:</label>
-                      <div class="col-sm-10">          
-                        <select class="form-control" id="gender" name="gender">
-                            <option value='male'>male</option>
-                            <option value='female'>female</option>
-                        </select>
-                      </div>
-                    </div>
-                    <div class="form-group">
-                      <label class="control-label col-sm-2" for="clothsize">Clothingsize:</label>
-                      <div class="col-sm-10">
-                        <select class="form-control" id="clothsize" name="clothsize">
-                            <option>XS</option>
-                            <option>S</option>
-                            <option>M</option>
-                            <option>L</option>
-                            <option>XL</option>
-                            <option>XXL</option>
-                        </select>
-                      </div>
-                    </div>
-                    <div class="form-group">
-                      <label class="control-label col-sm-2" for="shoesize">Shoesize:</label>
-                      <div class="col-sm-10">
-                        <select class="form-control" id="shoesize" name="shoesize">
-                            <option>35</option>
-                            <option>36</option>
-                            <option>37</option>
-                            <option>38</option>
-                            <option>39</option>
-                            <option>40</option>
-                            <option>41</option>
-                            <option>42</option>
-                            <option>43</option>
-                            <option>44</option>
-                            <option>45</option>
-                            <option>46</option>
-                            <option>47</option>
-                            <option>48</option>
-                        </select>
-                      </div>
-                    </div>
-                    <div class="form-group">
-                      <label class="control-label col-sm-2" for="favocolor">Favorite color:</label>
-                      <div class="col-sm-10">
-                        <select class="form-control" id="favocolor" name="favocolor">
-                            <option>blue</option>
-                            <option>green</option>
-                            <option>yellow</option>
-                            <option>orange</option>
-                            <option>red</option>
-                            <option>purple</option>
-                            <option>pink</option>
-                            <option>grey</option>
-                            <option>black</option>
-                            <option>white</option>
-                            <option>brown</option>
-                        </select>
-                      </div>
-                    </div>
-                    <div class="form-group col-sm-10 col-sm-push-1 text-center top-buffer">
-                        <button type="submit" class="btn btn-default" id ="submit">Submit</button>
-                    </div>
-                </form>
+                </div>
             </div>
         </div>
-    </div>
-    <script src="js/profilepage.js"></script>
-</body>
+        <script src="js/profilepage.js"></script>
+    </body>
