im css sind eig gar keine Aenderungen hab nur was probiert, anpassungen damit es bei mir auch passt

--- a/neue pages/main.html
+++ b/neue pages/main.html
@@ -39,11 +39,11 @@
                 </div>
                 <div class="col-sm-2 white">
                     <div class ="row top-buffer">
-                        <div class="col-sm-8">
+                        <div class="col-sm-7">
                             <h3>Vacations</h3>
                         </div>
-                        <div class="col-sm-4 top-buffer" >
-                            <button id="addVacation" class="btn btn-default btn-sm" data-toggle="modal" data-target="#modVacation"><span class="glyphicon glyphicon-plus"></span> add </button>
+                        <div class="col-sm-5 top-buffer" id="test" >
+                            <button id="addVacation"  class="btn btn-default btn-sm" data-toggle="modal" data-target="#modVacation"><span class="glyphicon glyphicon-plus"></span> add </button>
                         </div>
                     </div>
                     <div class ="row">
